debian/etc/iptables/rules.v4
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Aug 29 15:05:34 2026
*mangle
:PREROUTING ACCEPT [14926:1828564]
:INPUT ACCEPT [9314:1487232]
:FORWARD ACCEPT [5438:322540]
:OUTPUT ACCEPT [8904:1390815]
:POSTROUTING ACCEPT [14334:1712323]
-A PREROUTING -s 192.168.101.50/32 -i ens37 -p udp -m udp --dport 443 -j DROP
COMMIT
# Completed on Sat Aug 29 15:05:34 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Aug 29 15:05:34 2026
*raw
:PREROUTING ACCEPT [14926:1828564]
:OUTPUT ACCEPT [8904:1390815]
-A PREROUTING -d 172.18.0.2/32 ! -i br-b8c442fb9767 -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-b8c442fb9767 -j DROP
-A PREROUTING -d 172.18.0.2/32 ! -i br-0f724d1733e1 -j DROP
-A PREROUTING -d 172.18.0.2/32 ! -i br-50d4e1f4fe95 -j DROP
-A PREROUTING -d 172.18.0.2/32 ! -i br-c03d886052c2 -j DROP
COMMIT
# Completed on Sat Aug 29 15:05:34 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Aug 29 15:05:34 2026
*filter
:INPUT ACCEPT [9314:1487232]
:FORWARD DROP [20:1680]
:OUTPUT ACCEPT [8904:1390815]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -i ens37 -o ens33 -j ACCEPT
-A FORWARD -i ens33 -o ens37 -j ACCEPT
-A DOCKER ! -i br-c03d886052c2 -o br-c03d886052c2 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-c03d886052c2 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-c03d886052c2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-c03d886052c2 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-USER -i ens37 -o ens33 -j NFQUEUE --queue-num 0 --queue-bypass
-A DOCKER-USER -i ens33 -o ens37 -j NFQUEUE --queue-num 0 --queue-bypass
COMMIT
# Completed on Sat Aug 29 15:05:34 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Aug 29 15:05:34 2026
*nat
:PREROUTING ACCEPT [4550:220932]
:INPUT ACCEPT [143:11208]
:OUTPUT ACCEPT [1325:95696]
:POSTROUTING ACCEPT [1097:82012]
:DOCKER - [0:0]
-A PREROUTING -s 192.168.101.50/32 -i ens37 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8080
-A PREROUTING -s 192.168.101.50/32 -i ens37 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-c03d886052c2 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-50d4e1f4fe95 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-0f724d1733e1 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-b8c442fb9767 -j MASQUERADE
-A POSTROUTING -o ens37 -j MASQUERADE
-A POSTROUTING -s 192.168.101.0/24 -o ens33 -j MASQUERADE
COMMIT
# Completed on Sat Aug 29 15:05:34 2026
